feat: 添加项目初始化工具，支持自动更新配置文件和创建Gradio界面

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ line-ending = "auto"
 dev = [
     "build>=1.2.2.post1",
     "coverage>=7.8.1",
+    "gradio>=5.31.0",
     "mypy>=1.15.0",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
