--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/ffmpeg-converter
+      url: https://pypi.org/p/starter_pypkg
 
     steps:
     - uses: actions/checkout@v4
